editoast: utoipa anotations for electrical profiles
